--- a/Programing_solutions.ipynb
+++ b/Programing_solutions.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "string=\"\"\n",
-    "with open(r'QTX_Programming Question/InputText.txt') as f:\n",
+    "with open('InputText.txt') as f:\n",
     "    for lines in f:\n",
     "        string +=lines\n",
     "    string=re.sub(r'[^\\w\\s]','',string) \n",
